add: get article by slug feature
